--- a/styles/home.scss
+++ b/styles/home.scss
@@ -58,11 +58,16 @@ h1 {
       overflow: hidden;
       margin: 5px;
       padding: 0 10px;
+      
     }
 
     .message-content {
       flex: 8;
       color:white;
+      background-color: #32cd32;
+     border-radius:20px;
+     width: 100px;
+
     }
 
     .message-username {
@@ -72,7 +77,7 @@ h1 {
     }
 
     .navbar {
-     
+      
       color:white;
       height: 60px;
       left: 0;
